# itmo-fp-hw2

./: README.md
hw2/: hw2.cabal
hw2/src/HW2/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs
