name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for homework #2
description:         Homework #2 for FP ITMO course

homepage:            https://github.com/fp-ctd-itmo/homework-2-cannor147
license:             MIT
license-file:        LICENSE
author:              Erofey Bashunov
maintainer:          cannor147@gmail.com
copyright:           2021 Erofey Bashunov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     HW2.T1
                       HW2.T2
                       HW2.T3
                       HW2.T4
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010
